[package]
name = "espdap"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-println = { version = "0.13.1", features = ["defmt-espflash", "critical-section"], optional = true, git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"], git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-embassy = { version = "0.7.0", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { version = "0.15.1", features = ["exception-handler", "panic-handler", "defmt"], git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx = { version = "0.10.0", git = "https://github.com/esp-rs/esp-hal.git" }

defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", optional = true }

static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-executor = { version = "0.7.0", features = ["defmt"] }
embassy-usb = { version = "0.4.0", default-features = false, features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
replace_with = { version = "0.1.7", default-features = false }

dap-rs = { git = "https://github.com/bugadani/dap-rs", rev = "e9aa3c3", features = ["defmt"] }
bitbang-dap = { git = "https://github.com/bugadani/bitbang-dap", rev = "138717a", features = ["defmt"] }
heapless = "0.8.0"

[features]
default = ["esp32s3"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3"]

[patch.crates-io]
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "3ffee5e22bc3d0a999842debc67d3111b9e3f771" }
